Add optional imageType to call
